added dryad doi and reference

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -78,7 +78,7 @@ Number of references: 67\\
 
 \section*{Data accessibility}
 
-Code is available in the GitHub repository \url{https://github.com/malbion/JointModelFramework}. Data presented in the case study is available from the Dryad  Digital Repository: \url{https://doi.org/XXXX}. 
+Code is available in the GitHub repository \url{https://github.com/malbion/JointModelFramework}. Data presented in the case study is available from the Dryad  Digital Repository: \url{https://doi.org/10.5061/dryad.h44j0zpq3}. 
 
 \newpage
 
@@ -248,7 +248,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
     \subsection{Case study}
 
        \paragraph{}
-        We applied this framework to an annual wildflower community dataset from Western Australia, collected in 2016 (permit number SW017856 for "Flora take for a Scientific or Other Prescribed Purpose License" issued by the Western Australia Department of Parks and Wildlife). This dataset contains over 5000 observations of individual plant seed production from 22 different focal species, and the identity and density of all neighbouring individuals within a 3 to 5 cm radius of the focal individual. The environmental heterogeneity of this system is well studied \parencite{Dwyer2015} and we thus know that at the local scales across which this system was surveyed, only soil phosphorous, shade and the presence of woody debris impact on diversity and abundance patterns. To account for this known environmental heterogeneity, we randomly thinned plots to decouple abundance and environment effects (Supplementary Methods \ref{SI:comdata}). We used our framework to quantify interactions between these 22 focal species and 52 neighbour species, and derived scaled interaction strengths with a well-supported population dynamics model for annual plants with a seed bank \parencite{Levine2009, Bimler2018} which required experimentally-measured species demographic rates (Supplementary Methods \ref{SI:germination}). Viable seed production was used as the measure of performance and modelled with a negative binomial distribution and a log link. Further details on the procedure for deriving scaled interactions from the population dynamics model are available in the Supplementary Methods \ref{SI:popdyn}.
+        We applied this framework to an annual wildflower community dataset from Western Australia \parencite{Bimler2023}, collected in 2016 (permit number SW017856 for "Flora take for a Scientific or Other Prescribed Purpose License" issued by the Western Australia Department of Parks and Wildlife). This dataset contains over 5000 observations of individual plant seed production from 22 different focal species, and the identity and density of all neighbouring individuals within a 3 to 5 cm radius of the focal individual. The environmental heterogeneity of this system is well studied \parencite{Dwyer2015} and we thus know that at the local scales across which this system was surveyed, only soil phosphorous, shade and the presence of woody debris impact on diversity and abundance patterns. To account for this known environmental heterogeneity, we randomly thinned plots to decouple abundance and environment effects (Supplementary Methods \ref{SI:comdata}). We used our framework to quantify interactions between these 22 focal species and 52 neighbour species, and derived scaled interaction strengths with a well-supported population dynamics model for annual plants with a seed bank \parencite{Levine2009, Bimler2018} which required experimentally-measured species demographic rates (Supplementary Methods \ref{SI:germination}). Viable seed production was used as the measure of performance and modelled with a negative binomial distribution and a log link. Further details on the procedure for deriving scaled interactions from the population dynamics model are available in the Supplementary Methods \ref{SI:popdyn}.
 
         \paragraph{}
         We fit all three models to the case study data with 4 chains and 7000 iterations, of which the first 5000 were discarded. All parameters for the NDDM-only model converged well; however, some of the $\gamma$ and $B$ parameters for the RIM-only and joint models received $\hat{R}$ values over $1.01$. High $\hat{R}$ values without other warnings are commonly associated with posteriors that are highly correlated and whose geometry is hence difficult to traverse \parencite{Team2022}. The impact of such ``problematic geometries'' however, is dependent on the data at hand, as evidenced by reliable convergence of all models on the simulated data. We explain why this may be the case for the $r$ and $e$ parameters in our case study and how this affects the $\hat{R}$ of $\gamma$ and $B$ in the Supplementary Methods \ref{SI:convergence}. By comparing the fits across models and the resulting posterior distributions of model parameters, we remained comfortable using the joint model estimates returned by multiple chains to further study the interactions underlying the case study data. Supplementary Methods \ref{SI:convergence} goes into further detail in this regard and, in particular, shows how the posterior intervals of the model parameters remain informative despite high $\hat{R}$ values. Model parameters were sampled 1000 times from the 80\% posterior confidence intervals to construct our parameter estimates. We then applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the community interaction network.
@@ -298,7 +298,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
     Species interaction networks have a wide range of practical applications, such as evaluating ecosystem response to human-altered landscapes, guiding future management decisions \parencite{Ross2011} or exploring how communities may respond to global warming \parencite{Gorman2019}. Conservation and ecosystem management efforts aimed at regulating species abundances can, for example, use the information provided by an interaction network to prioritise which species to conserve or eradicate based on their role in the community \parencite{Cirtwill2018a}. Identifying keystone, foundation and other important types of species roles is also helpful for understanding biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019} though often requires the inclusion of other trophic levels. The examples we describe here are not exhaustive, but serve to illustrate how horizontal interaction networks, especially when linked to population models, can help us understand both community dynamics overall and the effects \& response of specific species towards the community. 
 
     \paragraph{}
-    Quantifying the community interaction matrix can also allow us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015a}); weak interactions between species suggest that they are not sharing or competing for many resources, and thus may have large niche differences in the community. Moreover, our inclusion of facilitative interactions, which have traditionally been disregarded in plant population models and mathematical frameworks of plant coexistence, provides a means to investigate the prevalence and strength of facilitation across multiple species and how it may act in relation to competition and species diversity. Recent work suggests facilitation may be more widespread than traditionally thought \parencite{Gross2015, Picoche2020} and is likely to benefit species diversity and stability in some systems \parencite{Coyte2015, Brooker2008}.
+    Quantifying the community interaction matrix can also allow us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015}); weak interactions between species suggest that they are not sharing or competing for many resources, and thus may have large niche differences in the community. Moreover, our inclusion of facilitative interactions, which have traditionally been disregarded in plant population models and mathematical frameworks of plant coexistence, provides a means to investigate the prevalence and strength of facilitation across multiple species and how it may act in relation to competition and species diversity. Recent work suggests facilitation may be more widespread than traditionally thought \parencite{Gross2015, Picoche2020} and is likely to benefit species diversity and stability in some systems \parencite{Coyte2015, Brooker2008}.
 
     \paragraph{}
     Ultimately, quantifying species interaction networks allows us to apply tools from network theory to help us understand how these interactions drive community-level patterns of density and diversity. Several metrics already exist for describing horizontal network structure such as weighted connectance \parencite{Ulanowicz1991} or relative intransitivity \parencite{Laird2006}, though these are fewer than for trophic or unweighted networks (e.g.\ \cite{Bersier2002, Delmas2019}). Adapting measures of nestedness or modularity for example to non-sparse networks (as horizontal communities typically are) would allow us to further characterise how interactions and species are organised. These metrics relate to various aspects of stability and could greatly inform us on how diversity is maintained. Likewise, networks also provide several ways of measuring and describing species roles in their communities \parencite{Cirtwill2018a} for example through the use of structural motifs, unique patterns of interacting species which together make up the whole network. Motifs have been found to have important biological meaning in food webs \parencite{Bascompte2005a} but remain to be identified for horizontal networks. 
